src/components/features/NewFurniture/NewFurniture.module.scss
@import "../../../styles/settings.scss";

.root {
  .panelBar {
    margin-bottom: 30px;
    position: relative;

    :global(.row) > * {
      border-bottom: 4px solid #e2e2e2;
    }

    .heading {
      position: relative;

      h3 {
        color: $primary;
        text-transform: uppercase;
        font-size: 20px;
        line-height: 38px;
        margin: 0;
        letter-spacing: 1px;
      }

      &::before {
        content: "";
        position: absolute;
        bottom: -4px;
        left: 0;
        width: 45px;
        border-bottom: 4px solid $primary;
      }
    }

    .menu {
      text-align: center;
      ul {
        margin: 0;
        padding: 0;
        list-style: none;
        li {
          display: inline-block;
          margin: 0 0.5rem;
          font-weight: 600;

          a {
            color: rgb(42, 42, 42);
            position: relative;
            text-decoration: none;
            font-size: 18px;
            display: block;

            &.active,
            &:hover {
              &::before {
                content: "";
                position: absolute;
                bottom: -4px;
                left: 0;
                width: 100%;
                border-bottom: 4px solid $primary;
              }
            }
          }
        }
      }
    }

    .dots {
      position: absolute;
      right: 0;
      top: 0;

      ul {
        margin: 0;
        padding: 0 0 0 1rem;
        list-style: none;
        background-color: #ffffff;
        transform: translateY(15px);

        li {
          display: inline-block;
          margin-left: 0.5rem;

          a {
            display: block;
            width: 13px;
            height: 13px;
            border-radius: 6px;
            background-color: #e1e1e1;
            font-size: 0;

            &.active,
            &:hover {
              background-color: $primary;
            }
          }
        }
      }
    }
  }
}

